Fix hero text overflowing on super narrow screen

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,7 +1,7 @@
 .hero{
     background-image: url("../assets/images/hero.jpg");
     width: 100%;
-    height: 700px;
+    min-height: 700px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
